# Solsniper-zero

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  QUICK_START.md  README.md  TASKS.md  TESTING.md  ancient_math.py  config.example.toml  config.highrisk.toml  config.minimal.toml  config.toml  demo.command  demo.py  docker-compose.yml  one_click_trading_demo.command  one_click_trading_demo.py  one_click_trading_demo.sh  paper.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup.py  showcase.command  sitecustomize.py  start.command  start.py  start_all.py
alien_math/: __init__.py
config/: default.toml
datasets/: README.md  alien_artifacts.json  alien_cipher.json
depth_service/: Cargo.toml  build.rs
depth_service/src/: main.rs  route.rs
docs/: agents.md  environment.md  full-system-startup.md  mev-bundles.md  setup.md  usage.md
proto/: event.proto
route_ffi/: Cargo.toml
route_ffi/benches/: heuristic.rs
route_ffi/src/: lib.rs
scripts/: auto_train.py  auto_train_rl.py  benchmark_event_bus_batch.py  benchmark_event_bus_mmap.py  benchmark_latency.py  benchmark_memory.py  benchmark_rl_prep.py  benchmark_serialization.py  benchmark_trade_dataset.py  build_rust.py  build_tick_dataset.py  check_protos.py  checks.py  cluster_setup.py  compression_demo.py  deps.py  diagnostics.py  env_checks.py  export_model.py  generate_alien_cipher_dataset.py  generate_proto.py  healthcheck.py  investor_demo.py  investor_showcase.py  launch.py  launcher.py  live_finetune_transformer.py  logging_utils.py  mac_env.py  mac_setup.py  mac_setup.sh  one_click.py  one_click_trading_demo.py  online_train_dqn.py  online_train_ppo.py  online_train_transformer.py  paper_test.py  preflight.py  profile_snapshot.py  quick_setup.py  (+33 more)
sklearn/: ensemble.py  linear_model.py
solana/: __init__.py  publickey.py
solders/: hash.py  instruction.py  keypair.py  message.py  pubkey.py  signature.py  transaction.py
solhunter_zero/: __init__.py  _preflight.py  advanced_memory.py  agent_manager.py  alien_math.py  analysis.py  ancient_math.py  arbitrage.py  async_scanner.py  autopilot.py  backtest_cli.py  backtest_pipeline.py  backtester.py  base_memory.py  bootstrap.py  bootstrap_checks.py  (+115 more)
(+355 files in other folders)
