[project]
name = "solhunter-zero"
version = "0.1.0"
description = "Autonomous AI-driven trading bot for the Solana blockchain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "sqlalchemy",
    "numpy",
    "pandas",
    "scikit-learn",

    "solana",
    "solders",
    "flask",

    "aiohttp",
    "pyyaml",
    "torch",
    "pytorch-lightning",
    "faiss-cpu",
    "sentence-transformers",
]

[project.scripts]
solhunter-wallet = "solhunter_zero.wallet_cli:main"
solhunter-backtest = "solhunter_zero.backtest_cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["solhunter_zero*"]
