[package]
name = "depth_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
memmap2 = "0.9"
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"
base64 = "0.21"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
