[package]
name = "route_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
bincode = "1"
rayon = { version = "1", optional = true }
ureq = { version = "2", features = ["tls"] }
tungstenite = { version = "0.21", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
url = "2"

[features]
default = []
parallel = ["rayon"]
